# vitrai

./: .gitignore  .mise.toml  PLAN.md  README.md  test_modal_call_local.py  test_modal_lookup.py
.github/workflows/: ci.yml
backend/: local_predictor.py  main.py  predictor.py  pyproject.toml  test_modal_call.py
data/: mountains.ai  orange.ai  orange.psd
docs/library-picker-rebuild/: OWNERSHIP.md  RELEASE_CHECKLIST.md  report.md  scale_audit.json  scale_report.md  striker_quarantine.json  striker_quarantine.md  vlm_judge_pilot.md  vlm_judge_pilot_results.json  vlm_judge_targeted.md  vlm_judge_targeted_results.json
frontend/: index.html  logo_intro.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  assets.ts  defaultProject.ts  glassEstimator.ts  i18n.ts  samBackend.ts  samWorker.ts  theme.ts  types.ts  vlmWorker.ts
modal/: sam2_app.py
research/delighting/: .gitignore  README.md  assembled_bench.py  bet1_probe.py  build_boards_053.py  catalog_prior_gate.py  catalog_texture_audit.py  check_validation.py  contact_sheet.py  crop_sim.py  differentiable_sheet_catalog_prior.py  differentiable_sheet_curl_regularized.py  differentiable_sheet_curl_scale_prior.py  differentiable_sheet_heightfield.py  differentiable_sheet_integrable_projection.py  differentiable_sheet_inverse.py  extract.py  (+26 more)
scripts/: audit_flagger.py  build_swatch_library.py  scale_audit.py  scale_audit_lib.py  swatch_picker.py  sweep_uncropped_bullseye.py  vlm_judge_report.py  vlm_judge_striker.py  vlm_judge_targeted.py  vlm_pick_judge.py
(+646 files in other folders)
