[project]
name = "vitraux-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "modal>=0.73",
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
local-sam = [
    "sam2==1.1.0",
    "torch>=2.5.1",
    "opencv-python-headless==4.10.0.84",
    "pillow==10.4.0",
    "numpy==2.0.2",
    "huggingface_hub",
]
